# docker/engine/app/models/__init__.py
@@ -2,7 +2,8 @@ from flask_sqlalchemy import SQLAlchemy
 
 db = SQLAlchemy()
 
-from engine.app.models.intern.users import Users
+from engine.app.models.intern.patients import Patients
+from engine.app.models.intern.collaborators import Collaborators
 from engine.app.models.intern.roles import Roles
 from engine.app.models.intern.default import DefaultModel
 from engine.app.models.intern.exams import Exams
