# docker/engine/app/models/intern/exams.py
@@ -10,10 +10,10 @@ class Exams(DefaultModel, db.Model):
     exam_local = db.Column(db.String(100), nullable=False)
     exam_date = db.Column(db.DateTime, nullable=False)
     validity = db.Column(db.DateTime, nullable=True)
-    patient = db.Column(db.String(50), db.ForeignKey("users.id"))
+    patient = db.Column(db.String(50), db.ForeignKey("patients.id"))
     patient_name = db.Column(db.String(100), nullable=False)
     patient_identifier = db.Column(db.String(11), nullable=False)
-    doctor = db.Column(db.String(50), db.ForeignKey("users.id"))
+    doctor = db.Column(db.String(50), db.ForeignKey("collaborators.id"))
     doctor_name = db.Column(db.String(100), nullable=False)
 
     @property
