# docker/engine/app/resources/api/admin/__init__.py
@@ -1,4 +1,5 @@
 from engine.app.resources.api.admin.roles import *
-from engine.app.resources.api.admin.users import *
+from engine.app.resources.api.admin.patients import *
 from engine.app.resources.api.admin.settings import *
+from engine.app.resources.api.admin.collaborators import *
 
