# docker/engine/app/resources/api/patient/scheduling/__init__.py
@@ -1,6 +1,7 @@
 from engine.app.resources.api import api
 from engine.app.services.authentication.auth_decorators import api_auth
-from engine.app.models.intern.users import Users
+from engine.app.models.intern.patients import Patients
+from engine.app.models.intern.collaborators import Collaborators
 from engine.app.models.intern.scheduling import Scheduling
 from flask import request, jsonify
 from engine.app.utils.converters.convert_data_to_model import convert_json_to_model
@@ -15,7 +16,7 @@ log = logging.getLogger("Higia." + __name__)
 @api_auth(roles=['patient'])
 def show_schedules(patient):
     log.info(f'Retrieving patient {patient.username} schedulers.')
-    patient = Users.query.filter_by(identifier=patient.identifier).first_or_404()
+    patient = Patients.query.filter_by(identifier=patient.identifier).first_or_404()
     schedulers = patient.patient_schedulers
     log.debug(f'Schedulers: {len(schedulers)}')
     return jsonify({'Schedules': [x.serialized(x.protected_fields) for x in schedulers]}), 200
@@ -25,8 +26,8 @@ def show_schedules(patient):
 @api_auth(roles=['patient'])
 def mark_schedule(patient, doctor_id):
     log.info(f'Creating a schedule for user with identifier: {patient.identifier}.')
-    doctor = Users.query.filter_by(id=doctor_id).with_entities(Users.full_name).first_or_404()
-    patient_data = Users.query.filter_by(identifier=patient.identifier).with_entities(Users.id).first_or_404()
+    doctor = Collaborators.query.filter_by(id=doctor_id).with_entities(Collaborators.full_name).first_or_404()
+    patient_data = Patients.query.filter_by(identifier=patient.identifier).with_entities(Patients.id).first_or_404()
     data = request.json
     data['doctor_name'] = doctor.full_name
     data['doctor'] = doctor_id
